# Mestrado

./: README.md
fuzzy/: README.md
rna_projeto/: .gitignore  README.md  description.txt  pyproject.toml
rna_projeto/output/: stenosis_annotations.csv
rna_projeto/src/: main.ipynb  preprocessing.ipynb
topicos_avancado_tomografia/headset/: .gitignore  README.md  pyproject.toml
topicos_avancado_tomografia/headset/data/darkflat_headset/: dark01.txt  dark02.txt  dark03.txt  flat01.txt  flat02.txt  flat03.txt  teste01.txt  teste02.txt  teste03.txt
topicos_avancado_tomografia/headset/data/projections_headset/: img1.txt  img10.txt  img100.txt  img101.txt  img102.txt  img103.txt  img104.txt  img105.txt  img106.txt  img107.txt  img108.txt  img109.txt  img11.txt  img110.txt  img111.txt  img112.txt  img113.txt  img114.txt  img115.txt  img116.txt  img117.txt  img118.txt  img119.txt  img12.txt  img120.txt  img121.txt  img122.txt  img123.txt  img124.txt  img125.txt  img126.txt  img127.txt  img128.txt  img129.txt  img13.txt  img130.txt  img131.txt  img132.txt  img133.txt  img134.txt  (+360 more)
topicos_avancado_tomografia/headset/src/utils/: __init__.py  alignment.py  display.py  file.py  metric.py  processing.py
topicos_avancado_tomografia/parallelepiped/: .gitignore  ContinuousSpectrumFile.txt  ContinuousSpectrumFileRaw.txt  README.md  pyproject.toml
topicos_avancado_tomografia/parallelepiped/script/: Tigre.ipynb  generateSino.ipynb  runCT.py  spectrum.ipynb  visualize_volume.ipynb
topicos_avancado_tomografia/parallelepiped/script/utils/: files.py  plots.py  utils.py
(+113 files in other folders)
