[project]
name = "parallelepiped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "k3d>=2.17.0",
    "matplotlib>=3.10.7",
    "nibabel>=5.3.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "silx>=2.2.2",
]
